corrected error message spacing on pdp

--- a/packages/scandipwa/src/component/ProductBundleOptions/ProductBundleOptions.style.scss
+++ b/packages/scandipwa/src/component/ProductBundleOptions/ProductBundleOptions.style.scss
@@ -30,7 +30,7 @@
             }
 
             &_type_select + .Field-ErrorMessages {
-                margin-block-start: 3px;
+                margin-block-start: 6px;
             }
 
             &-Wrapper {
